fix: variable names
Took 1 hour 23 minutes