@@ -5,7 +5,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
@@ -24,6 +23,6 @@ public class OrderLineServiceImpl implements OrderLineService {
         return repository.findAllByOrderId(orderId)
                        .stream()
                        .map(mapper::toOrderLineResponse)
-                       .collect(Collectors.toList());
+                       .toList();
     }
 }
